# lnbits-registry

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  gen_client_libs.py  openapi.json  pyproject.toml  vendor.yml
app/: app.py  db.py  models.py  schemas.py  users.py
app/auth/: router.py
app/extensions/: exceptions.py  models.py  router.py  schema.py  service.py
app/static/: flutter_service_worker.js  index.html  main.dart.js  manifest.json  version.json
app/static/assets/: NOTICES
app/static/assets/shaders/: ink_sparkle.frag
app/versions/: models.py  router.py  schema.py  service.py
